@@ -25,6 +25,7 @@ Cacti CHANGELOG
 -issue#5174: Empty Location when adding new device
 -issue#5180: Audit Database has issues with storage engine compare
 -issue#5181: Poller functions can cause SQL errors in some cases when working with remote data collectors
+-issue#5182: Graph Image does not have check for Remote Agent
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
